@@ -1,13 +1,14 @@
 Cacti CHANGELOG
 
 1.1.37
+-issue#1371: Further fix for #1371 due to incorrect sign usage
 -issue#1405: When Data Query columns are wide, they cause rendering issues
 -issue#1419: CLog: preg_match can blow up log file
 -issue#1420: Debian test suite reports issues 
 -issue#1421: Fix issue when SQL had all bad modes, missing variable warning was generated
 -issue#1426: Fix issue where remote poller was not using unique filenames when attempting to verify files
 -issue#1432: Delete confirmation does not disappear
--issue#1371: Further fix for #1371 due to incorrect sign usage
+-issue#1447: Cli audit_database.php not detecting database name, and failed to create audit tables when run fresh
 -issue: Output message timer not clearing properly on page refresh
 -issue: Incorrect default found path of spine
 -feature: Updated Chinese Simplified translations
